--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 set( MiddleTestCV_src
     main.cpp
     dataset.cpp
+    detector.cpp
 )
 add_executable(MiddleTestCV ${MiddleTestCV_src})
 
