--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,6 +17,19 @@ jobs:
       packages: read
       actions: read
       contents: read
+      
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Install OpenCV
+      run: sudo apt update && sudo apt install -y libopencv-dev
+
+    - name: Compile
+      run: g++ main.cpp -o main `pkg-config --cflags --libs opencv4`
 
     strategy:
       fail-fast: false
